# SimpleAndroidApp

./: .gitignore  README.md  build.gradle  detekt.gradle  gradle.properties  ktlint.gradle  settings.gradle
app/: build.gradle
app/objectbox-models/: default.json  default.json.bak
app/src/androidTest/java/com/example/simpleandroidapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/simpleandroidapp/: App.kt  MainActivity.kt
app/src/main/res/drawable/: ic_beer.xml  ic_launcher_foreground.xml  ic_moose.xml  launch_screen.xml
app/src/main/res/layout/: fragment_about.xml  fragment_first.xml  fragment_second.xml  fragment_third.xml  main_activity.xml
app/src/main/res/menu/: bottom_nav_menu.xml  overflow_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/rs/: mono.rs
app/src/test/java/com/example/simpleandroidapp/: CoroutinesTest.kt  ModuleChecking.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/.cargo/: config
rust/benches/: mandel_benchmark.rs
rust/src/: lib.rs
simplerustlibrary/: build.gradle
simplerustlibrary/src/androidTest/java/com/example/simplerustlibrary/: ExampleInstrumentedTest.kt  RustLibraryExampleInstrumentedTest.kt
simplerustlibrary/src/main/: AndroidManifest.xml
simplerustlibrary/src/main/java/com/example/simplerustlibrary/: rust.kt
simplerustlibrary/src/main/res/values/: strings.xml
simplerustlibrary/src/test/java/com/example/simplerustlibrary/: ExampleUnitTest.kt  RustLibraryUnitTest.kt
(+24 files in other folders)
