[package]
name = "simplerust"
version = "0.1.0"
authors = ["Björn Nyberg"]

[dependencies]
jni = "0.14.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
crate_type = ["rlib", "staticlib", "dylib"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mandel_benchmark"
harness = false